--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     }
   },
   "dependencies": {
-    "@mysten/sui.js": "0.0.0-experimental-20230731203002",
-    "@mysten/wallet-standard": "0.0.0-experimental-20230731203002",
+    "@mysten/sui.js": "0.39.0",
+    "@mysten/wallet-standard": "0.5.14",
     "@noble/hashes": "^1.3.0",
     "tweetnacl": "^1.0.3"
   },
@@ -35,8 +35,8 @@
     "vite-plugin-dts": "^2.3.0"
   },
   "peerDependencies": {
-    "@mysten/sui.js": "0.0.0-experimental-20230731203002",
-    "@mysten/wallet-standard": "0.0.0-experimental-20230731203002"
+    "@mysten/sui.js": "0.39.0",
+    "@mysten/wallet-standard": "0.5.14"
   },
   "scripts": {
     "build": "tsc --emitDeclarationOnly && vite build",
